# kobo-library-sync

./: .gitignore  Cargo.toml  Dockerfile  README.md  ci.Dockerfile  deny.toml  justfile  renovate.json  rust-toolchain.toml  rustfmt.toml
.devcontainer/: compose.yaml  devcontainer.Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: audit.yml  build-ci-image.yml  build-image.yml  continuous-integration.yml  prepare-ci-image.yml  renovate.yml  retag-ci-image.yml  retag-image.yml
crates/kobo-server/: Cargo.toml
crates/kobo-server/src/: app.rs  command_line_arguments.rs  lib.rs  main.rs  server.rs
crates/kobo-server/src/server/: client.rs  kobo_store_fallback.rs  mod.rs  request_logging.rs  router.rs  server.rs  server_impl.rs  server_implementation.rs  server_state.rs
crates/kobo-server/src/server/listener/: fake_listener.rs  fake_listener_builder.rs  into_listener.rs  mod.rs
crates/kobo-server/src/server/middleware/: kobo_store_fallback.rs  mod.rs  request_logging.rs
crates/kobo-server/src/server/routes/: constants.rs  initialization.rs  kobo_store_request.rs  mod.rs
crates/kobo-server/src/server/state/: client.rs  fake_kobo_client.rs  mod.rs  server_state.rs
crates/kobo-server/src/server/utils/: http_body.rs  mod.rs
crates/kobo-server/tests/: clean_shutdown.rs  integration_tests.rs  simple_rest_call.rs
crates/kobo-server/tests/tests/: clean_shutdown.rs  mod.rs  simple_rest_call.rs
examples/: Cargo.toml
images/ci/: Dockerfile  binstall-versions.json  binstall-versions.txt
images/production/: Dockerfile  binstall-versions.json
