[package]
name = "examples"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[[example]]
name = "starter"
path = "starter.rs"
