[package]
name = "kobo-server"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
flate2 = "1.1.5"
http-body-util = "0.1.3"
hyper = "1.8.0"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.18", features = ["client-legacy"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.12.24"
tokio-test = "0.4"
tracing-test = "0.2.5"
