[package]
name = "kobo-server"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", default-features = false, features = ["http2", "tokio"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
flate2 = "1.1.7"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2", "rustls-native-certs", "ring"] }
hyper-util = { version = "0.1.18", features = ["client-legacy"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.17"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["normalize-path"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
tracing-test = "0.2.5"
